--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,8 +37,14 @@ dependencies:
   http: ^0.13.4
   dio: ^4.0.6
   animated_text_kit: ^4.2.1
-  flutter_tindercard: ^0.2.0
-  google_fonts: ^3.0.1
+  firebase_core: ^1.17.1
+  firebase_storage: ^10.2.17
+  cloud_firestore: ^3.1.17
+  flutter_bloc: ^8.0.1
+  firebase_crashlytics: ^2.8.1
+  flutter_launcher_icons: ^0.9.3
+  easy_localization: ^3.0.1
+  flutter_speed_dial: ^6.0.0
 
 
 
@@ -67,6 +73,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
+    - assets/translations/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
