--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.17.0 <3.0.0"
+  sdk: '>=3.3.0 <4.0.0'
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -34,17 +34,17 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  http: ^0.13.4
-  dio: ^4.0.6
+  http: ^1.2.2
+  dio: ^5.5.0+1
   animated_text_kit: ^4.2.1
-  firebase_core: ^1.17.1
-  firebase_storage: ^10.2.17
-  cloud_firestore: ^3.1.17
+  firebase_core: ^2.24.2
+  firebase_storage: ^11.6.0
+  cloud_firestore: ^4.14.0
   flutter_bloc: ^8.0.1
-  firebase_crashlytics: ^2.8.1
-  flutter_launcher_icons: ^0.9.3
+  firebase_crashlytics: ^3.4.9
+  flutter_launcher_icons: ^0.13.1
   easy_localization: ^3.0.1
-  flutter_speed_dial: ^6.0.0
+  flutter_speed_dial: ^7.0.0
 
 
 
@@ -57,7 +57,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^2.0.0
+  flutter_lints: ^4.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
